# argonaut.voyage

./: .gitignore  README.md  Xpackage.json  index.html  package-lock.json  package.json  tsconfig.json  vue.config.js
backend/: Cargo.toml  README.md
backend/data/: classes.json  classes.txt  conetns.json  firssttwo.txt  input.txt  objects.json  objects.txt  root.json  root.txt  temp.json  temp.rs
backend/data/testvalidator/: classes.json  classes.txt  testvalidator.json  testvalidator.txt  universe.txt
backend/src/: argoquery_validator.rs  classes.rs  http_request.rs  lib.rs  next_step.rs  objects.rs  packed_2_value  temp.rs  utils.rs  value_2_packed
contracts/: .eosproj  READMD.md  blockprocess.abi  blockprocess.wasm
contracts/argonautvoya/: READMD.md  argonautvoya.abi  argonautvoya.wasm
contracts/include/: blockprocess.hpp
contracts/src/: blockprocess.cpp
frontend/: README.md  index.html  package.json  vue.config.js
frontend/contracts/: blockprocess.abi  blockprocess.wasm
frontend/public/: argonautdb.json  randomkeys.json
frontend/src/: App.vue  main.ts
public/: addTestAccountActions.json  argonaut..json  argonaut.json  argonautFiltered.json  argonautdb.json  blockprocess copy.json  blockprocess.json  home.html  homeargonautvoya.html  homebikeshop1111.html  temp.js
src/: App.vue  components.d.ts  main.js  main.ts  temp.json  temp2.json
src/assets/: argonautstatic.js
src/components/: BalanceSheet.vue  ClassModel.vue  Document.vue  Form.vue  HtmlPage.vue  JsonSchemaForm.js  Layout.vue  MainPage.vue  NavigationMenu.vue  Page.vue  PageEditor.vue  ProcessModel.vue  SettingsDlg.vue  StudioLayout.vue  Table.vue  Tabs.vue  Tree.vue  WidgetSelector.js  Widgets.js
src/composables/: useArgoQuery.js  useScene.ts  (+4 more)
(+192 files in other folders)
