[package]
name = "argonaut"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-graphql = "4.0.1"
json = "0.12.4"
psibase = "0.6.0"
rand = { version = "0.8.5", features = ["small_rng"] }
rand_chacha = "0.3.1"

regex = "1.10.3"
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.114"
#jsonschema = "0.17.1"
#reqwest = { version = "0.10.0-alpha.2", features = ["blocking"] }
